Added Header & Hero section in index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-</body>
-</html>
+  <header class="header">
+    <div class="container header-inner">
+      <div class="logo">Header Logo</div>
+      <ul class="nav">
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <section class="hero">
+    <div class="container hero-inner">
+      <div class="hero-left">
+        <h1 class="hero-title">This website is awesome</h1>
+        <p class="hero-subtext">
+          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+        </p>
+        <button class="btn primary">Sign up</button>
+      </div>
+
+      <div class="hero-right">
+        <div class="hero-image">
+          this is a placeholder for an image
+        </div>
+      </div>
+    </div>
+  </section>
