Finished html part
Added information, quote, call to action and a footer.
Also some images taken from google

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="hero">
     <div class="container hero-inner">
       <div class="hero-left">
-        <h1 class="hero-title">This website is awesome</h1>
+        <h1 class="hero-title">FAL10000 is awesome</h1>
         <p class="hero-subtext">
           This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
         </p>
@@ -35,3 +35,58 @@
       </div>
     </div>
   </section>
+
+  <section class="info">
+    <div class="container">
+      <h2 class="info-title">About FAL10000</h2>
+
+      <div class="info-cards">
+        <div class="info-card">
+          <div class="box"><img src="images/sad.png"></div>
+          <p>Is actually FAL10, but the nickname is taken</p>
+        </div>
+        <div class="info-card">
+          <div class="box"><img src="images/cool.png"></div>
+          <p>It is taken from his real name and his favourite number</p>
+        </div>
+        <div class="info-card">
+          <div class="box"><img src="images/baby.png"></div>
+          <p>That favourite number was decided when he was 10 years old</p>
+        </div>
+        <div class="info-card">
+          <div class="box"><img src="images/gun.png"></div>
+          <p>Also inspired from one of the weapon in CrossFire</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="quote">
+    <div class="container quote-inner">
+      <p class="quote-text">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+      </p>
+      <p class="quote-author">-Thor, God of Thunder</p>
+    </div>
+  </section>
+
+<section class="cta">
+    <div class="container">
+      <div class="cta-box">
+        <div class="cta-text">
+          <div class="cta-title">Call to action! It's time!</div>
+          <div class="cta-subtext">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="btn outline">Sign up</button>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container footer-inner">
+      Copyright © The Odin Project 2021
+    </div>
+  </footer>
+
+</body>
+</html>
