Finished hero section
Added an image from imgbin.com
Used a dark blue background and separated the text and image part
Sign up button is given a blue color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="hero-right">
         <div class="hero-image">
-          this is a placeholder for an image
+          <img src="images/space.png" alt="A transparent background with a large group of various emoticons scattered around it. The emoticons are of different sizes and shapes, including a smiley face with a big smile, a red heart, a camera, a headset, a keyboard, a mouse, and a phone. There are also red and yellow hearts scattered throughout the image. The overall style of the image is playful and whimsical. from imgbin.com">
         </div>
       </div>
     </div>
