--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="info-card">
           <div class="box"><img src="images/cool.png"></div>
-          <p>It is taken from his real name and his favourite number</p>
+          <p>Is taken from his real name and his favourite number</p>
         </div>
         <div class="info-card">
           <div class="box"><img src="images/baby.png"></div>
